SERVER-6659 - fix find_and_modify when upserting a new doc and original query won't work anymore